<!--
  ~ Created By JONGHO, LEE, Researcher of Institute of Biomedical Engineering, TechHeim Co.,Ltd.
  ~ on  2021.
  ~ This software is not stable health-care system and not certificated any health-care authority(like CE, FDA)
  ~ Prohibit redistribution, modification, commercial use.
  ~ Copyright 테크하임(주). All rights reserved.
  -->

<resources>
    <string name="app_name">NubeX Messenger</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="version">version 1.0.0</string>
    <string name="profileimage">ProfileImage</string>
    <string name="profilestatus">profileStatus</string>
    <string name="title_activity_profile_info">ProfileInfo</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">"대화 상대 검색"</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="modify">수정</string>
    <string name="Chatting">1:1채팅</string>
    <string name="working">근무</string>
    <string name="leaving">퇴근</string>
    <string name="vacation">휴가</string>


    <string name="title_activity_chat_add">ChatAddActivity</string>
    <string name="hint_password">Password</string>
    <string name="login">로그인</string>
    <string name="sign_hospital">병원 설정</string>
    <string name="auto_login">자동 로그인</string>
    <string name="hint_user_id">Username</string>
    <string name="search_pacs">PACS 이동</string>
    <string name="pacs">PACS</string>
    <string name="settingFragment">설정</string>
    <string name="fix_top">상단 고정</string>
    <string name="setting_alarm">알람 설정</string>
    <string name="chat_room_member">채팅방 멤버</string>
    <string name="invite_member">대화상대 초대</string>
    <string name="exit">나가기</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="rename_chat_room">채팅방 이름 편집</string>

    <string name="frinedList">친구목록</string>
    <string name="chatList">채팅목록</string>
    <string name="PACSReference">PACS</string>
    <string name="setting">설정</string>
    <string name="entire_friends">전체</string>
    <string name="added_user">추가된 사용자</string>
    <string name="search_user">사용자 검색</string>
    <string name="pacs_new_window">PACS 새 창에서 열기</string>
    <string name="title_activity_profile_modification">ProfileModificationActivity</string>
    <string name="change_profile_image">수정</string>
    <string name="cancel">취 소</string>
    <string name="confirm">확 인</string>
    <string name="share">공유하기</string>

</resources>
