<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created By Jong Ho, Lee on  2020.
  ~ Copyright 테크하임(주). All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_add_search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/chat_add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="새로운 채팅방 추가"
        app:titleTextColor="@color/cWhite" />

    <TextView
        android:id="@+id/chat_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/elevation_xs"
        android:paddingStart="@dimen/padding_m"
        android:paddingTop="@dimen/padding_m"
        android:paddingBottom="@dimen/padding_m"
        android:text="@string/added_user"
        android:textColor="@color/cWhite"
        app:layout_constraintBottom_toTopOf="@id/chat_added_member_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_add_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_added_member_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        app:layout_constraintBottom_toTopOf="@id/chat_add_chat_user_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_add_description" />

    <EditText
        android:id="@+id/chat_add_chat_user_input"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/search_user"
        app:layout_constraintBottom_toTopOf="@id/chat_add_member_search_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_added_member_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_add_member_search_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/chat_add_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_add_chat_user_input">

    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/chat_add_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_add_member_search_view">

        <Button
            android:id="@+id/chat_add_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="@dimen/margin_s"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/confirm"
            android:textColor="@color/cContentText" />

        <Button
            android:id="@+id/chat_add_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_s"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/cancel"
            android:textColor="@color/cContentText" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>