<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created By Jong Ho, Lee on  2021.
  ~ Copyright 테크하임(주). All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cWhite"
    android:elevation="@dimen/elevation_l"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_xl"
    android:translationY="8000dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowWRapperName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_ss"
        android:gravity="center_vertical|left"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_l"
        android:paddingTop="@dimen/padding_m"
        android:paddingRight="@dimen/padding_l"
        android:paddingBottom="@dimen/padding_m">

        <RelativeLayout
            android:id="@+id/imageWrapeer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/bottomProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="@dimen/profile_image_l"
                    android:layout_height="@dimen/profile_image_l"
                    android:src="@drawable/ic_default_profile_black_24" />

                <ImageView
                    android:id="@+id/profileStatus"
                    android:layout_width="@dimen/status_l"
                    android:layout_height="@dimen/status_l"
                    android:layout_gravity="right|bottom"
                    android:src="@drawable/ic_status_on" />
            </FrameLayout>

            <TextView
                android:id="@+id/modifyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bottomProfileImage"
                android:layout_centerHorizontal="true"
                android:text="@string/modify" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rowWrapperName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageWrapeer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageWrapeer"
            android:gravity="center"
            android:paddingStart="@dimen/padding_l">

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cBlack"
                android:textSize="@dimen/txt_Ml"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/modifyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cBlack"
                android:textSize="@dimen/txt_Ml"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/modifyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_l"
                android:text="@string/modify" />
        </LinearLayout>

        <FrameLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageWrapeer"
            app:layout_constraintTop_toBottomOf="@+id/rowWrapperName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_s"
                android:background="@color/cWhite"
                android:elevation="@dimen/elevation_l"
                android:paddingTop="@dimen/padding_l"
                android:visibility="invisible">

                <LinearLayout
                    android:id="@+id/working_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/status_l"
                        android:layout_height="@dimen/status_l"
                        android:src="@drawable/ic_status_on" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/working" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/leaving_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/status_l"
                        android:layout_height="@dimen/status_l"
                        android:src="@drawable/ic_status_busy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leaving" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vacation_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/status_l"
                        android:layout_height="@dimen/status_l"
                        android:src="@drawable/ic_status_off" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacation" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/chatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_l"
                android:background="#00ff0000"
                android:drawableLeft="@drawable/ic_chat_black_24"
                android:drawablePadding="@dimen/padding_l"
                android:paddingStart="@dimen/padding_l"
                android:text="@string/Chatting"
                android:textSize="@dimen/txt_xl"
                android:visibility="visible" />
        </FrameLayout>


        <TextView
            android:id="@+id/mClose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_l"
            android:text="닫기"
            android:textColor="@color/cBlack"
            android:textSize="@dimen/txt_m"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>